<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <TextView
        android:id="@+id/ipAddress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address" />

    <TextView
        android:id="@+id/ipAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hostname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hostname" />

    <TextView
        android:id="@+id/hostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <ToggleButton
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/connect"
        android:textOn="@string/disconnect" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp" />

    <ToggleButton
        android:id="@+id/talk_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/talk"
        android:textOn="@string/stop_talking" />

    <TextView
        android:id="@+id/builtin_commands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/builtin_commands"
        android:textAlignment="center" />

</LinearLayout>