<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/searchpc_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search_computers"
        app:layout_constraintBottom_toTopOf="@+id/talking_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/talking_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/talking_progressbar"
        app:layout_constraintBottom_toTopOf="@+id/serverlist_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchpc_button" />

    <TextView
        android:id="@+id/phone_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipInput" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serverlist_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/remote_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/talking_progressBar" />

    <TextView
        android:id="@+id/remote_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/remote_connect"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/ipInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverlist_recyclerView" />

    <EditText
        android:id="@+id/ipInput"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/input_ip"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/phone_name"
        app:layout_constraintEnd_toStartOf="@+id/portInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remote_control"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/remote_connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/remote_connect_button"
        app:layout_constraintBottom_toTopOf="@+id/phone_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/portInput"
        app:layout_constraintTop_toBottomOf="@+id/remote_control"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/portInput"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="4"
        android:hint="@string/input_port"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phone_name"
        app:layout_constraintEnd_toStartOf="@+id/remote_connect_button"
        app:layout_constraintStart_toEndOf="@+id/ipInput"
        app:layout_constraintTop_toBottomOf="@+id/remote_control"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>